--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 <body>
 <!-- this will trigger the id #header to include the header -->
-<div id="header"></div>
+<div>
+</div>
 
 
 <!-- Home page starts -->
@@ -544,7 +545,7 @@
 <!-- ######################################### -->
  
     <!-- jquery script to make it trigger the header & footer -->
-    <script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js">
       $(function(){
          $("#header").load("/partials/header.html"); 
          $("#footer").load("/partials/footer.html"); 
