--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ hamburger.addEventListener('click', () => {
 
 /* ----------------- 404 ----------------- */
 function redirectTo404() {
-    window.location.href = "/404.html"; 
+    window.location.href = "./404.html"; 
 }
 
 document.addEventListener("DOMContentLoaded", function() {
@@ -75,27 +75,27 @@ document.addEventListener("DOMContentLoaded", function() {
     <div class="nav__wrapper">
       <nav class="nav__main">
         <ul class="ul__main flx">
-          <a href="/index.html">
+          <a href="./index.html">
             <li>Home</li>
           </a>
-          <a href="/404.html">
+          <a href="./404.html">
             <li>About</li>
           </a>
           <li class="dropdown">
-            <a href="/404.html">Pages</a>
+            <a href="./404.html">Pages</a>
             <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
 
             <ul class="dropdown-menu">
-              <li><a href="/404.html">Shop</a></li>
+              <li><a href="./404.html">Shop</a></li>
             </ul>
           </li>
-          <a href="/shop.html">
+          <a href="./shop.html">
             <li>Shop</li>
           </a>
-          <a href="/404.html">
+          <a href="./404.html">
             <li>Projects</li>
           </a>
-          <a href="/404.html">
+          <a href="./404.html">
             <li>News</li>
           </a>
         </ul>
@@ -149,7 +149,7 @@ document.addEventListener("DOMContentLoaded", function() {
            
             </div>
             <div class="cart__btn">
-            <a href="/checkout.html" class=" xd__btn btn-secondary">checkout
+            <a href="./checkout.html" class=" xd__btn btn-secondary">checkout
               <img src="./assets/graphics/hero/btn-arrow-icon.png" alt="">
           </a>
             </div>
