--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ document.addEventListener("DOMContentLoaded", function() {
             </div>
 
             <div class="hero__graphic">
-              <!-- <img src="./assets/graphics/hero/Banner.jpg" alt="" /> -->
+              <img src="./assets/graphics/hero/Banner.jpg" alt="" /> 
             </div>
           </div>
         </div>
