--- a/checkout.html
+++ b/checkout.html
@@ -258,7 +258,7 @@ button
 
 <div class="checkout_cart">
     <div class="checkout_cart_row">
-    <img class="cart__image" src="/assets/graphics/Shop/product-3.png">
+    <img class="cart__image" src="../assets/graphics/Shop/product-3.png">
     <p class="product__name"> Peanuts</p>
     <div class="product__detail">
         <p class="product__discount">$20.00</p>
@@ -304,7 +304,7 @@ button
           
       </div>
       <div class="checkout_cart_row button cart__btn">
-        <button id="orderBtn" style="display: none;" type="submit" class="subscribe__btn xd__btn btn-secondary"><a href="/thanks.html">Order</a></button>
+        <button id="orderBtn" style="display: none;" type="submit" class="subscribe__btn xd__btn btn-secondary"><a href="./thanks.html">Order</a></button>
       </div>
 </div>
 
