--- a/thanks.html
+++ b/thanks.html
@@ -93,27 +93,27 @@ document.addEventListener("DOMContentLoaded", function() {
     <div class="nav__wrapper">
       <nav class="nav__main">
         <ul class="ul__main flx">
-          <a href="/index.html">
+          <a href="./index.html">
             <li>Home</li>
           </a>
-          <a href="/404.html">
+          <a href="./404.html">
             <li>About</li>
           </a>
           <li class="dropdown">
-            <a href="/404.html">Pages</a>
+            <a href="./404.html">Pages</a>
             <i class="fa fa-chevron-circle-down" aria-hidden="true"></i>
 
             <ul class="dropdown-menu">
-              <li><a href="/404.html">Shop</a></li>
+              <li><a href="./404.html">Shop</a></li>
             </ul>
           </li>
-          <a href="/shop.html">
+          <a href="./shop.html">
             <li>Shop</li>
           </a>
-          <a href="/404.html">
+          <a href="./404.html">
             <li>Projects</li>
           </a>
-          <a href="/404.html">
+          <a href="./404.html">
             <li>News</li>
           </a>
         </ul>
@@ -139,7 +139,7 @@ document.addEventListener("DOMContentLoaded", function() {
           <div class="cart__single">
             <div class="cart__image">
              
-            <img src="/assets/graphics/Shop/product-3.png" alt="">
+            <img src="../assets/graphics/Shop/product-3.png" alt="">
             </div>
             
             <div class="cart__info">
