--- a/404.html
+++ b/404.html
@@ -56,7 +56,7 @@
             <h2>404 Page Not Found</h2>
             <p>The page you are looking for doesn't exist or has been moved</p>
             <p class="full">
-                <button type="submit" class="btn-secondary xd__btn">Go to Homepage
+                <button type="submit" class="btn-secondary xd__btn"><a href="./index.html">Go to Homepage</a>
                     <img src="./assets/graphics/hero/btn-arrow-icon.png" alt="">
                 </button>
             </p>
