--- a/thanks.html
+++ b/thanks.html
@@ -139,7 +139,7 @@ document.addEventListener("DOMContentLoaded", function() {
           <div class="cart__single">
             <div class="cart__image">
              
-            <img src="../assets/graphics/Shop/product-3.png" alt="">
+            <img src="./assets/graphics/Shop/product-3.png" alt="">
             </div>
             
             <div class="cart__info">
